touch-up to weather app

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -17,6 +17,8 @@
         </form>
         <div>
             {{!-- <p id="message-1"></p> --}}
+            <p id="message-1"></p>
+            <img alt="" id="message-icon"><span id="weather-desc"></span>
             <p id="message-2"></p>
         </div>            
     </div>
