--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,15 +7,22 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-color: #65C18C;
+    /* background-color: #65C18C; */
+    background-image: url("../img/bg.jpg");
+    background-size: cover;
+    /* opacity: 0.9; */
 }
 
 .main-content {
     flex-grow: 1;
-    background-color: #C1F4C5;
+    /* background-color: #C1F4C5; */
+    background-color: #22587e83;
     border-radius: 300px;
-    border-right: 5px solid green;
-    border-left: 5px solid green;
+    /* border-right: 5px solid green; */
+    /* border-left: 5px solid green; */
+    border-bottom: 10px solid green;;
+    /* opacity: 100%; */
+    /* filter: contrast(150%); */
 }
 
 footer {
@@ -66,6 +73,10 @@ button {
     width: 150px;
     border-radius: 20px;
 }
+button:hover{
+    background-color: #86bedf;
+}
+
 .input-anButton{
     text-align: center;
     margin-top: 250px;
@@ -78,7 +89,10 @@ button {
 }
 
 #message-1{
-    font-size: larger;
+    text-align: center;
+    font-size: xx-large;
+    color: white;
+    text-shadow: 2px 2px black;
 }
 
 #message-2{
@@ -86,4 +100,33 @@ button {
     text-align: center;
     font-size: xx-large;
     font-weight: bold;
+    color: white;
+    text-shadow: 2px 2px black;
+}
+
+#message-icon{
+    margin: auto;
+    height: 100px;
+    border-radius: 15px;
+    /* margin-left: 270px; */
+    margin-left: 160px;
+    -moz-box-shadow: 5px 5px 5px rgb(185, 163, 163);
+    -webkit-box-shadow: 5px 5px 10px rgb(200, 173, 173);
+    box-shadow: 0 0 15px rgb(173, 148, 148);
+}
+#message-icon:hover{
+    height: 110px;
+    width: 120px;
+    transition: 0.5s;
+    /* transition-delay: 2s; */
+}
+
+#weather-desc{
+    /* text-align: center; */
+    margin-left: 10px;
+    padding-left: 5px;
+    font-size: x-large;
+    font-style: italic;
+    color: white;
+    text-shadow: 1px 1px black;
 }
