--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
     <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
@@ -13,16 +15,16 @@
         <form class="input-anButton">
             <input placeholder="Location" class="place-holder"><br>
             <button>Search</button>
-            <p id="message-1"></p>
         </form>
-        <div>
+        <div class="report">
             {{!-- <p id="message-1"></p> --}}
             <p id="message-1"></p>
-            <img alt="" id="message-icon"><span id="weather-desc"></span>
+            <img alt="" id="message-icon" src=""><span id="weather-desc"></span>
             <p id="message-2"></p>
-        </div>            
+        </div>
     </div>
 
     <script src="/js/app.js"></script>
 </body>
+
 </html>
